--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -14,6 +14,8 @@ html{
     background-color: #009FFD;
     height: 100%;
     width: 100%;
+}
+
 div {
   color: var(--second-color);
 }
@@ -48,3 +50,35 @@ p {
     #profile {
         background-color: var(--fifth-color);
     }
+  }
+
+  .react-resizable {
+    position: relative;
+  }
+  .react-resizable-handle {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    bottom: 0;
+    right: 0;
+    cursor: se-resize;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M 1 9 L 9 1 M 4 9 L 9 4 M 7 9 L 9 7' stroke='%23fff' stroke-width='1' fill='none' stroke-linecap='square'/%3E%3C/svg%3E");
+  }
+  .react-resizable-handle::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  .react-resizable-handle:hover::after {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  .react-resizable-handle:active {
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+  
