cleaned up home.js, broke it down into components

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -39,6 +39,10 @@ p {
     width: max-content;
 }
 
+#profile {
+  position: relative
+}
+
 @media screen and (max-width: 480px) {
     #main-page {
         display: flex;
