--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -8,7 +8,13 @@
   left: 0;
   bottom: 0;
   width: 100%;
+  display: flex;
+  align-items: center;
 };
+
+.github-icon {
+  cursor: pointer;
+}
 
 @media screen and (max-width: 480px) {
   .footer {
