--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #f2f2f2;
-  color: #333;
+  background-color: #04263b;
+  color: #ffffff;
   padding: 20px;
   text-align: center;
   justify-content: center;
