--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -3,7 +3,7 @@
   color: #333;
   padding: 20px;
   text-align: center;
-  justify-content: center;
+  justify-content: space-between;
   position: fixed;
   left: 0;
   bottom: 0;
