--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -78,6 +78,38 @@ p {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #profile, #profile * {
+    visibility: visible;
+  }
+  #profile {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .react-resizable-handle {
+    display: none !important;
+  }
+  @page {
+    size: auto;
+    margin: 0mm;
+  }
+  @page :first {
+    margin-top: 0;
+  }
+  @page :left {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  @page :right {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 @media screen and (max-width: 480px) {
     #main-page {
         display: flex;
